# finance-tracker

./: .gitignore  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260314_add_payment_method_color.py  20260314_initial_schema.py  20260314_seed_categories.py
backend/app/: auth.py  config.py  constants.py  db.py  main.py
backend/app/api/: transactions.py
backend/app/models/: __init__.py  budget.py  category.py  payment_method.py  transaction.py
backend/app/schemas/: summary.py  transaction.py
backend/app/services/: summary.py  transaction.py
backend/tests/integration/: conftest.py  test_summary_endpoint.py  test_transaction_endpoint.py
backend/tests/unit/: conftest.py  test_summary_service.py  test_transaction_service.py
docs/features/: 001-monthly-expense-breakdown-chart.md  002-add-transaction-endpoint.md  README.md
docs/plan/: 001-monthly-expense-breakdown-chart.md  002-add-transaction-endpoint.md
frontend/: Dockerfile  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/nginx/: default.conf
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: summary.ts
frontend/src/components/charts/: ChartSkeleton.tsx  ExpenseBreakdownChart.tsx  GroupByToggle.tsx  MonthNavigator.tsx  PieChartDisplay.tsx
frontend/src/pages/: DashboardPage.tsx
frontend/src/styles/: theme.css
